--- a/public/assets/css/login.css
+++ b/public/assets/css/login.css
@@ -4,9 +4,10 @@
     margin: 0;
     padding: 0;
     font-family: 'Fluxo Afacad', sans-serif;
+     box-sizing: border-box;
 }
 
-body{
+.main-login{
     width: 100%;
     height: 100vh;
     display: flex; /* centraliza ou alinha itens vertical e horizontalmente de maneira simples*/
@@ -15,7 +16,7 @@ body{
     background-color: #181818a8;
 }
 
-.container {
+.container-login {
     width: 80%;
     height: 80vh;
     display: flex;
