--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -199,3 +199,23 @@ button:hover {
 tbody tr:nth-child(even) {
 background-color: cinza;
 }
+
+.box-success {
+    display: none;
+    background-color: green;
+    color: white;
+    text-align: center;
+    padding: 10px;
+    border-radius: 5px;
+}
+.border-error {
+    border: 1px solid red;
+}
+.box-error {
+    display: none;
+    background-color: rgba(255, 0, 0, 0.705);
+    color: white;
+    text-align: center;
+    padding: 10px;
+    border-radius: 5px;
+}
