--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -1,203 +1,204 @@
 h2 {
-  color: #fff;
-}
+    color: #fff;
+  }
 
 #formTitle {
-color: black;
+  color: black;
 }
 
 * {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    outline: none;
+    text-decoration: none;
+  }
 
-body {
-  font-family: Arial, sans-serif;
-  background-color: #ffffff;
+  body {
+    font-family: Arial, sans-serif;
+    background-color: #ffffff;
+  }
+  
+  .main-header {
+    background-color: #000000;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px 20px;
+  }
+  
+  .nav-links {
+    list-style: none;
+    display: flex;
+    align-items: center;
+    gap: 20px;
+  }
+  
+  .nav-links li a {
+    color: white;
+    text-decoration: none;
+  }
+  
+  .nav-links li a:hover {
+    color: #ff0000;
+  }
+  
+  .header-right {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+  }
+  
+  .header-right label {
+    color: white;
+    font-weight: bold;
+  }
+  
+  .header-right select,
+  .header-right input[type="text"] {
+    padding: 5px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+  }
+  
+  .logout {
+    background: none;
+    border: none;
+    color: white;
+    cursor: pointer;
+  }
+  .notificacoes {
+    background: none;
+    border: none;
+    color: rgb(0, 0, 0);
+    cursor: pointer;
+  }
+  .container {
+    width: 80%;
+    margin: auto;
+    padding-top: 70px;
+  }
+  
+  .header-botoes {
+    padding: 20px;
 }
-
-.main-header {
-  background-color: #000000;
-  color: white;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 10px 20px;
-}
-
-.nav-links {
-  list-style: none;
-  display: flex;
-  align-items: center;
-  gap: 20px;
-}
-
-.nav-links li a {
-  color: white;
-  text-decoration: none;
-}
-
-.nav-links li a:hover {
-  color: #ff0000;
-}
-
-.header-right {
-  display: flex;
-  align-items: center;
-  gap: 10px;
-}
-
-.header-right label {
-  color: white;
-  font-weight: bold;
-}
-
-.header-right select,
-.header-right input[type="text"] {
-  padding: 5px;
-  border-radius: 5px;
-  border: 1px solid #ccc;
-}
-
-.logout {
-  background: none;
-  border: none;
-  color: white;
-  font-size: 1.2em;
-  cursor: pointer;
-}
-.notificacoes {
-  background: none;
-  border: none;
-  color: rgb(0, 0, 0);
-  cursor: pointer;
-}
-.container {
-  width: 80%;
-  margin: auto;
-  padding-top: 70px;
-}
-
-.header-botoes {
-  padding: 20px;
-}
-.header-botoes a{
-  text-decoration: none;
-  color: white;
-}
-.header-skills{
-  display: flex;
-  gap: 15; /* Espaço entre as divs */
-  justify-content: center; /* Centraliza as divs horizontalmente */
-  align-items: center; /* Alinha as divs verticalmente no centro */
-  justify-content: space-between;
-  margin: 8px;
-}
-.titulo {
-  color: rgb(0, 0, 0);
-  font-size: 25px;
-}
-button {
-  padding: 0.5em 1em;
-  background-color: #ff0000;
-  color: white;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  margin-right: 4px;
-}
-
-button:hover {
-  background-color: #540808;
-}
-
-.logout {
-  padding: 0.5em 1em;
-  background-color: #000000;
-  color: white;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-}
-
-button:hover {
-  background-color: #540808;
-}
+  .header-botoes a{
+    text-decoration: none;
+    color: white;
+  }
+  .header-skills{
+    display: flex;
+    gap: 15; /* Espaço entre as divs */
+    justify-content: center; /* Centraliza as divs horizontalmente */
+    align-items: center; /* Alinha as divs verticalmente no centro */
+    justify-content: space-between;
+    margin: 8px;
+  }
+  .titulo {
+    color: rgb(0, 0, 0);
+    font-size: 25px;
+  }
+  button {
+    padding: 0.5em 1em;
+    background-color: #ff0000;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-right: 4px;
+  }
+  
+  button:hover {
+    background-color: #540808;
+  }
+  
+  .logout {
+    padding: 0.5em 1em;
+    background-color: #000000;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+  
+  button:hover {
+    background-color: #540808;
+  }
 
 .pesquisar {
-  padding: 0.5em 1em;
-  background-color: #000000;
-  color: white;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-}
+    padding: 0.5em 1em;
+    background-color: #000000;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+  
+  button:hover {
+    background-color: #540808;
+  }
+  #employeesTable {
+    width: 100%;
+    border-collapse: collapse;
+    background-color: rgb(160, 159, 159);
+  }
+  
+  #employeesTable th, #employeesTable td {
+    padding: 10px;
+    text-align: left;
+    border: 2px solid #ffffff;
+    color: white;
+  }
+  
+  #employeesTable th {
+    background-color: #000000;
+    font-weight: bold;
+  }
+  
+  #employeesTable tr:hover {
+    background-color: #bfc2c5;
+  }
+  .modal {
+    /* display: none; */
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.4);
+  }
+  
+  .modal-content {
+    background-color: #fff;
+    margin: 10% auto;
+    padding: 10px;
+    width: 50%;
+    border-radius: 5px;
+  }
 
-button:hover {
-  background-color: #540808;
-}
-#employeesTable {
-  width: 100%;
-  border-collapse: collapse;
-  background-color: rgb(160, 159, 159);
-}
+  .close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    cursor: pointer;
+  }
+  
+  .close:hover {
+    color: #000;
+  }
 
-#employeesTable th, #employeesTable td {
-  padding: 10px;
-  text-align: left;
-  border: 2px solid #ffffff;
-  color: white;
-}
-
-#employeesTable th {
-  background-color: #000000;
-  font-weight: bold;
-}
-
-#employeesTable tr:hover {
-  background-color: #bfc2c5;
-}
-.modal {
-  display: none;
-  position: fixed;
-  z-index: 1;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.4);
-}
-
-.modal-content {
-  background-color: #fff;
-  margin: 10% auto;
-  padding: 10px;
-  width: 50%;
-  border-radius: 5px;
-}
-
-.close {
-  color: #aaa;
-  float: right;
-  font-size: 28px;
-  cursor: pointer;
-}
-
-.close:hover {
-  color: #000;
-}
-
-.viewmodal-content {
-  background-color: #fff;
-  margin: 10% auto;
-  padding: 20px;
-  width: 50%;
-  border-radius: 5px;
-}
-
-tbody tr:nth-child(even) {
-background-color: cinza;
+  .viewmodal-content {
+    background-color: #fff;
+    margin: 10% auto;
+    padding: 20px;
+    width: 50%;
+    border-radius: 5px;
+  }
+ 
+  tbody tr:nth-child(even) {
+	background-color: cinza;
 }
 
 .box-success {
