alterações pagina skill

--- a/public/assets/css/skills.css
+++ b/public/assets/css/skills.css
@@ -294,3 +294,11 @@ button:hover {
 .save-btn:hover {
   background-color: darkred;
 }
+
+#btn-edit-skill a{
+  color: white;
+}
+
+#btn-delete-skill a{
+  color: white;
+}
